# DivFlow

./: .gitignore  Makefile  README.md  conftest.py  env.py  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: pyright_test.yml  python-app.yml
app/models/: stock.py  stock_models.py
app/repositories/: stock.py  stock_repository.py
app/routers/: main_routers.py
db/: connection.py  database.py
models/: __init__.py  base.py  stock_models.py
repositories/: stock_repository.py
routers/: main_routers.py
tasks/: fetch_stock.py
tests/: maint_test.py  test_main.py
utils/: stock.py
