[tool.poetry]
name = "divflow"
version = "0.1.0"
description = ""
authors = ["Roman <romanbezh@gmail.com>"]
readme = "README.md"
packages = [{ include = "divflow" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.10.3"
sqlmodel = "^0.0.22"
python-decouple = "^3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
