[tool.poetry]
name = "divflow"
version = "0.1.0"
description = ""
authors = ["Roman <romanbezh@gmail.com>"]
readme = "README.md"
packages = [{ include = "divflow" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.10.3"
sqlmodel = "^0.0.22"
python-decouple = "^3.8"
yfinance = "^0.2.51"
fmpsdk = "^20250102.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pyright = "^1.1.391"
ruff = "^0.8.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Ruff configuration
[tool.ruff]
line-length = 88
exclude = [".venv", ".zed", ".git", ".pytest_cache", ".ruff_cache"]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
